# an_intelligent_iot_based_smart_bin_system

./: CMakeLists.txt
components/common_utils/: CMakeLIsts.txt
components/common_utils/include/: gps_types.h
components/config/: CMakeLists.txt
components/config/include/: system_config.h
components/core/: CMakeLists.txt
components/core/include/: command_params.h  command_router.h  command_types.h  core_self_test.h  core_types.h  event_dispatcher.h  event_types.h  state_manager.h  system_state.h
components/core/priv_include/: core_internal.h
components/core/src/: command_router.c  core_self_test.c  event_dispatcher.c  state_manager.c  system_state.c
components/drivers/: CMakeLists.txt
components/drivers/actuators/buzzer_driver/: buzzer_driver.c  buzzer_driver.h  main_buzzer_test.c
components/drivers/actuators/display/lcd_i2c_driver/: example_lcd_i2c_main.c  lcd_i2c_driver.c  lcd_i2c_driver.h
components/drivers/actuators/lcd_driver/: example_lcd_i2c_main.c  lcd_driver.c  lcd_driver.h
components/drivers/actuators/led_driver/: led_driver.c  led_driver.h  main_led_test.c
components/drivers/actuators/servo_driver/: servo_driver.c  servo_driver.h
components/drivers/comms/gps/: gps_driver.c  gps_driver.h
components/drivers/comms/gsm_sim800/: gsm_driver.c  gsm_sim800_driver.c  gsm_sim800_driver.h
components/drivers/comms/gsm_sim800/include/: gsm_sim800.h
components/drivers/sensors/pir/: pir_driver.c  pir_driver.h
components/drivers/sensors/pir_driver/: pir_driver.c  pir_driver.h
components/drivers/sensors/ultrasonic_driver/: ultrasonic_driver.c  ultrasonic_driver.h
components/services/: CMakeLists.txt
components/services/actuation/buzzer/: buzzer_service.c
components/services/actuation/buzzer_service/: buzzer_service.h
components/services/actuation/lcd_service/: lcd_service.c  lcd_service.h
components/services/actuation/led/: led_service.c
components/services/actuation/led_service/: led_service.c  led_service.h
components/services/actuation/servo/: servo_service.c
components/services/actuation/servo_service/: servo_service.c  servo_service.h
components/services/connectivity/gsm/: example_main_gsm  gsm_service.c  gsm_service.h
components/services/connectivity/mqtt/include/: mqtt_client_abstraction.h  mqtt_private.h  mqtt_service.h  mqtt_topic.h
components/services/connectivity/mqtt/src/: example_main_mqtt_wifi.c  mqtt_client_abstraction.c  mqtt_service.c  mqtt_topic.c
components/services/connectivity/wifi/include/: wifi_driver_abstraction.h  wifi_private.h  wifi_service.h
components/services/connectivity/wifi/src/: wifi_driver_abstraction.c  wifi_service.c
components/services/example/: example_service.c  example_service.h
components/services/include/: service_interfaces.h  service_manager.h
components/services/indicator/: example_main_indicator.c  indicator_service.c  indicator_service.h
components/services/location/: gps_service.c  gps_service.h
components/services/networking/bin_network_service/: bin_network_service.c  bin_network_service.h
components/services/sensing/pir_service/: pir_service.c  pir_service.h
components/services/sensing/ultrasonic/: ultrasonic_service.c  ultrasonic_service.h
components/services/sensing/ultrasonic_service/: ultrasonic_service.c
components/services/src/: service_manager.c
components/services/timer/: timer_service.c  timer_service.h
components/services/web_command/: web_command_service.c  web_command_service.h
docs/: ARCHITECTURE.md  HINTS.md  TODO.md  during_designing_an_intelligent_iot_based_smart_dustbin_system.txt  issues_to_be_fixed.md  mqtt_topics.md
main/: CMakeLists.txt  main.c
reserve/gsm_sim800/: gsm_driver.h
tests/: CMakeLists.txt
tests/include/: test_harness.h  ultrasonic_test.h
tests/src/: test_harness.c  ultrasonic_test.c  wifi_mqtt_test.c
